[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Graphics/Characters/Boshy/Projectiles/mind_control.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Characters/BoshyCharacters/Projectiles/MindControl.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 103, 156 )

[node name="MindControl" type="RigidBody2D"]
collision_layer = 16
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.38419e-07, 4.76837e-07 )
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 1 )

[node name="ChaseTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true
autostart = true

[node name="CollisionTween" type="Tween" parent="."]

[node name="SpriteTween" type="Tween" parent="."]

[connection signal="timeout" from="ChaseTimer" to="." method="_on_ChaseTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
